--- a/css/product.css
+++ b/css/product.css
@@ -1,487 +1,623 @@
-/* =============Shop Feature Section */
-
-.shop-feature{
-    width: 100vw;
-    place-items: center;
-    padding: 3rem 0;
-    display: grid;
-    /* text-decoration: underline; */
+.product-feature {
+  background-color: #f4f4f4;
+  margin-bottom: 40px;
 }
 
-
-.product-list{
-    display: grid;
+.product-feature .custom-container {
+  padding: 50px 0;
+  font-size: 1rem;
+  font-weight: 500;
 }
 
-.shop-product{
-    display: grid;
-}
-/* =========About Section================== */
-
-.about-section{
-    width: 90vw;
-    margin-inline: auto;
-    margin-block: 4rem;
-    display: grid;
-    grid-template-areas: 
-    'one'
-    'two';
+#ProductPhoto,
+#thumbnail-list li {
+  margin: 10px;
+  border: 1px solid #eee;
+  border-radius: 5px;
 }
 
-.about-section:nth-child(1){
-    grid-area: one;
+#ProductPhoto img,
+#thumbnail-list li img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
-.about-section:nth-child(2){
-    grid-area: two;
+.featured-image,
+#ProductPhoto {
+  overflow: hidden;
 }
 
-.about-section > * img{
-    border-radius: 2rem;
-    margin-bottom: 2rem;
+#webizoom {
+  position: relative;
+  width: 100%;
+  margin: auto;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
 }
 
-.about-info{
-    padding-inline: 0.5rem;
+.carousel-container {
+  flex: 1;
+  overflow: hidden;
 }
 
-.about-info p{
-    line-height: 1.8rem;
-}
-
-.about-btn{
-    margin-top: 3rem;
-}
-
-
-
-/* ==================Media Quries=== */
-
-@media (min-width: 60em){
-    .about-section{
-        grid-auto-columns: 1fr;
-        align-items: center;
-        --grid-gap: 3rem;
-        grid-template-areas: 
-        'two one three';
-    }
-
-    .about-info{
-        display: grid;
-        place-content: center;
-    }
-
-    .about-info > h3{
-        font-size: 1rem;
-    }
-}
-
-/* ============================= */
-
-.buttons{
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-bottom: 20px;
-}
-.buttons button{
-    background-color: #eee;
-    border: none;
-    padding: 10px 10px;
-    border-radius: 10px;
-    font-family: Poppins;
-    font-size: large;
-    cursor: pointer;
-}
-.buttons svg{
-    width: 15px;
-}
-.buttons span{
-    background-color: #555454;
-    width: 30px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    margin-left: 20px;
-}
-.buttons button:nth-child(2){
-    background-color: #2F2F2F;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #eee;
-    box-shadow: 0 10px 20px #2F2F2F77;
-}
-
-.buttons button:nth-child(1){
-    background-color: #ccc;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
-    box-shadow: 0 10px 20px #2F2F2F77;
-}
-
-.buttons .favori{
-    background-color: white;
-}
-
-/* ============================= */
-
-.detail-bar{
-    float: left;
-    text-align: center;
-    padding: 10px;
-    border: solid 1px #eee;
-    background: #eee;
-    border-radius: 1rem;
-}
-
-.detail-bar img{
-    width: 50%;
-    height: 25%;
-}
-
-.div-image{
-    display: flex;
-    justify-content: center;
-}
-
-
-
-/* ============================ */
-
-*,
-::after,
-::before{
-    box-sizing: border-box;
-}
-
-.quantity{
-    width: 125px;
-    height: 50px;
-    /* background-color: #edeefa; */
-    padding: 15px;
-    display: inline-flex;
-    overflow: hidden;
-    align-items: center;
-    border-radius: 20px;
-}
-
-.btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border: none;
-    width: 25px;
-    height: 25px;
-    font-size: 1rem;
-    background: 0 0;
-    color: #000;
-    cursor: pointer;
-}
-
-#qtyInput{
-    width: 100%;
-    border: none;
-    font-size: 1rem;
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-    color: #000;
-    background: 0 0;
-    flex: 1;
-    font-weight: 700;
-}
-
-#qtyInput:focus-visible{
-    outline: none;
-    
-}
-
-.prix{
-    margin-top: -25px;
-}
-
-.second{
-    /* margin: 0 40px; */
-    transition: transform 0.3s ease; /* Animation fluide */
-}
-
-.custom-hr {
-    border: 0;
-    height: 1px;
-    background-color: black; /* Couleur de la ligne */
-    width: 100%; /* Largeur de la ligne */
-    margin: 0 0; /* Espacement autour de la ligne */
-    /* margin-inline: 0.75em 1rem; */
-}
-
-/* =========================== */
-
-/* Style de la barre de navigation */
-.bar-nav {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center; /* Centre les éléments horizontalement */
-    position: relative;
-    /* background-color: #333; */
-    height: 60px;
-    align-items: center;
-}
-
-.bar-nav li {
-    position: relative;
-    margin: 0 20px;
-}
-
-.bar-nav li a {
-    text-decoration: none;
-    color: black;
-    padding: 10px 20px;
-    display: block;
-    font-weight: 700;
-    font-size: 1rem;
-    text-align: center;
-    position: relative;
-}
-
-/* Barre d'animation au-dessus de l'élément actif */
-.bar-nav li a::before {
-    content: '';
-    position: absolute;
-    top: -5px; /* Barre positionnée au-dessus du texte */
-    left: 0;
-    width: 100%;
-    height: 3px;
-    background-color: red;
-    transform: scaleX(0); /* La barre est invisible au départ */
-    transform-origin: center;
-    transition: transform 0.3s ease; /* Animation fluide */
-}
-
-/* Lorsque l'élément est survolé ou actif, la barre apparaît */
-/* .bar-nav li a:hover::before, */
-.bar-nav li a.active::before {
-    transform: scaleX(1); /* Barre visible au survol ou élément actif */
-}
-
-.bar-nav li a.active {
-    font-weight: bold;
-    background-color: #f5f5f5; /* Arrière-plan léger pour l'onglet actif */
-    color: red; /* Couleur rouge pour l'onglet actif */
-}
-
-/* ============================= */
-
-.container1 {
-    /* max-width: 600px; */
-    margin: auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    transform-origin: center;
-    transition: transform 0.3s ease; /* Animation fluide */
-}
-
-h2 {
-    text-align: center;
-    color: #333;
-    margin-bottom: 20px;
-}
-
-.specs-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-.specs-table tr {
-    border-bottom: 1px solid #ddd;
-}
-
-.specs-table td {
-    padding: 10px;
-    font-size: 16px;
-}
-
-.specs-table td:first-child {
-    font-weight: bold;
-    color: #555;
-}
-
-.specs-table td:nth-child(2) {
-    text-align: right;
-    color: #333;
-}
-
-h3 {
-    text-align: left;
-    margin-top: 20px;
-    color: #333;
-}
-
-
-/* ================================ */
-
-.product-images{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center; /* Centre les éléments horizontalement */
-    position: relative;
-    /* background-color: #333; */
-    height: 100px;
-    align-items: center;
+.product-images {
+  display: flex;
+  gap: 10px;
+  padding: 0;
+  margin: 0;
+  transition: transform 0.3s ease-in-out;
 }
 
 .product-images li {
-    position: relative;
-    margin: 0 20px;
-    white-space: nowrap;
-    display: inline-block;
+  flex: 0 0 auto;
+  width: calc(100% / 4 - 10px);
+  cursor: pointer;
 }
 
-.product-cover img {
-    transition: opacity 0.3s ease-in-out;
+.product-images img {
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
-/* .thumb-container{
-    width: 100px;
-    height: 100px;
-} */
-
-
-/* Container de l'image principale */
-.product-cover {
-    text-align: center;
-    margin-bottom: 20px;
+@media (max-width: 992px) {
+  .product-images li {
+    width: calc(100% / 3 - 10px);
+  }
 }
 
-#main-image {
-    max-width: 100%;
-    height: auto;
-    transition: opacity 0.5s ease;
+@media (max-width: 576px) {
+  .product-images li {
+    width: calc(100% / 2 - 10px);
+  }
 }
 
-/* Conteneur des images avec scroll horizontal */
-#webizoom {
-    overflow-x: auto;
-    white-space: nowrap;
-    margin: 10px 0;
-    scroll-behavior: smooth;
-    position: relative;
+.product-images li .active {
+  border: 1px solid var(--red);
 }
 
-/* Chaque image en ligne dans le carrousel */
-.product-images {
-    display: inline-block;
+.arrow-left,
+.arrow-right {
+  width: 45px;
+  height: 45px;
+  background-color: #e5e5e5;
+  color: #ffffff;
+  right: 30px;
+  bottom: 30px;
+  border-radius: 50%;
+  text-align: center;
+  transition: transform 0.3s ease-in-out;
 }
 
-.thumb-container {
-    display: inline-block;
-    margin-right: 10px;
+.arrow-left i,
+.arrow-right i {
+  display: block;
+  line-height: 50px;
+  font-size: 25px;
 }
 
-.thumb-container img {
-    width: 100px;
-    cursor: pointer;
-    border: 2px solid transparent;
-    transition: border 0.3s ease;
+.arrow-left:hover,
+.arrow-right:hover {
+  background-color: #a6a5a5;
 }
 
-.thumb-container img:hover {
-    border: 2px solid red;
+.arrow-left {
+  margin-right: 20px;
+}
+.arrow-right {
+  margin-left: 20px;
 }
 
-/* Conteneur des flèches */
-.scroll-box-arrows {
-    position: absolute;
-    bottom: 5%;
+#ProductPhoto {
+  transition: opacity 0.3s ease-in-out;
+  width: 200%;
+  height: auto;
+}
+
+.product-right {
+  padding: 25px 0;
+}
+
+.product-right h3 {
+  text-transform: capitalize;
+  font-size: 34px;
+  margin-bottom: 10px;
+  font-weight: 400;
+  color: #333;
+}
+
+@media (max-width: 767px) {
+  .product-right h3 {
+    font-size: 24px;
+    margin-top: 12px;
+  }
+}
+
+span.inventory-title {
+  font-size: 15px;
+  margin-bottom: 10px;
+  display: inline-block;
+  color: #333;
+}
+
+.stock_countdown_progress {
+  width: 100%;
+  background: #f5f5f5;
+  height: 5px;
+  border-radius: 50px;
+}
+
+span.stock_progress_bar {
+  display: block;
+  background: #333;
+  background-attachment: fixed;
+  height: 100%;
+  transition: width 2.5s ease;
+  border-radius: 50px;
+}
+
+.product-ref {
+  font-size: 14px;
+  margin: 25px 0 10px 0;
+}
+
+.productPriceContent {
+  display: flex;
+  align-items: center;
+  gap: 10%;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  padding: 10px 0;
+}
+
+.productPriceContent h3 {
+  font-size: 24px;
+  color: #e4573d;
+  font-weight: 700;
+  margin: 0;
+}
+
+.prev-price {
+  color: var(--red) !important;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: bold;
+  background: rgba(255, 0, 0, 0.1);
+  padding: 0 5px;
+  border-radius: 5px;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.price {
+  padding: 0 5px;
+  text-align: center;
+}
+
+.prev-price:hover {
+  background: var(--red);
+  color: #fff !important;
+  transform: scale(1.05);
+}
+
+.action-bar-content {
+  width: 50%;
+  display: flex;
+  gap: 15px;
+  flex-direction: column;
+}
+
+.product_additional_information {
+  margin: 10px 0 30px 0;
+  display: flex;
+  gap: 10px;
+}
+
+.product_additional_information button {
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: all 0.3s ease-in-out;
+  font-size: 16px;
+}
+
+.product_additional_information button:hover {
+  color: var(--red);
+}
+
+.action-bar {
+  width: 100%;
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.quantity {
+  display: flex;
+  align-items: center;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 5px 10px;
+  background: #f9f9f9;
+}
+
+.quantity span {
+  font-size: 20px;
+  font-weight: 500;
+  color: #333;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.quantity input {
+  border: none;
+  width: 50px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  color: #333;
+  margin: 0 5px;
+  background: transparent;
+}
+
+.quantity input:focus {
+  outline: none;
+}
+
+.product-cart-action button,
+.product-cart-buy button {
+  border: none;
+  padding: 12px 18px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 700;
+  color: #fff;
+  cursor: pointer;
+  transition: background 0.3s ease-in-out, transform 0.2s;
+}
+
+.product-cart-action button {
+  background: #333;
+  flex: 1;
+}
+
+.product-cart-action button:hover {
+  background: var(--red);
+  transform: scale(1.05);
+}
+
+.product-cart-buy button {
+  width: 100%;
+  background-color: var(--red);
+}
+
+.product-cart-buy button:hover {
+  background-color: #333;
+}
+
+.product-cart-action.addWishlist button {
+  background: transparent;
+  border: 1px solid #ccc;
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+.product-cart-action.addWishlist button:hover {
+  border-color: var(--red);
+  color: var(--red);
+}
+
+.product-cart-action.addWishlist:hover i {
+  color: var(--red);
+}
+
+.product-cart-action.addWishlist .favorite {
+  background-color: var(--red);
+}
+
+.product-cart-action.addWishlist .favorite i {
+  color: #fff;
+}
+
+.favorite .uil-spinner-alt {
+  color: #fff !important;
+}
+
+@media (max-width: 768px) {
+  .action-bar-content {
     width: 100%;
-    display: flex;
-    justify-content: space-between; /* Pour positionner les flèches de chaque côté */
-    align-items: center;
-    transform: translateY(-50%);
-    pointer-events: none; /* Permettre le clic sur les images sous les flèches */
+  }
 }
 
-/* Position des flèches */
-#scroll-left, #scroll-right {
-    font-size: 36px;
-    color: black;
-    background-color: rgba(255, 255, 255, 0.6); /* Fond semi-transparent */
-    padding: 10px;
-    border-radius: 50%; /* Forme ronde pour les flèches */
-    cursor: pointer;
-    pointer-events: all; /* Permettre les clics sur les flèches */
-    z-index: 10;
+.firstContent {
+  display: flex;
+  flex-direction: column;
 }
 
-/* S'assurer que le conteneur ne dépasse pas les bords de l'écran */
-.images-container {
-    position: relative;
-    overflow: hidden;
-    max-width: 100%;
+@media (min-width: 992px) {
+  .firstContent {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .product-right {
+    width: 45%;
+  }
+  .product-left {
+    width: 50%;
+  }
 }
 
-/* =============================== */
-
-.third{
-    text-align: center;
+.secondContent .bar-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 15px;
+  font-size: 18px;
 }
 
-.title{
+.secondContent .bar-nav li {
+  padding: 10px;
+  color: #646464;
+  cursor: pointer;
+  transition: background-color 0.5s ease-in-out;
+  border-radius: 10px 10px 0 0;
+}
+
+.secondContent .bar-nav .active {
+  background-color: hsl(0 0% 95.3%);
+  color: #000;
+}
+
+.all {
+  background-color: hsl(0 0% 95.3%);
+}
+
+.container1 {
+  margin: auto;
+  padding: 20px;
+  transform-origin: center;
+  transition: transform 0.3s ease;
+}
+
+.container1 h2 {
+  text-align: start;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.specs-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.specs-table tr {
+  border-bottom: 1px solid #ddd;
+}
+
+.specs-table td {
+  padding: 10px;
+  font-size: 16px;
+}
+
+.specs-table td:first-child {
+  font-weight: bold;
+}
+
+.specs-table td:nth-child(2) {
+  text-align: right;
+}
+
+.tab-content {
+  transition: opacity 0.25s ease-in-out;
+}
+
+.reviews-container {
+  margin: auto;
+}
+
+.average-rating {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.rating-bars {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+textarea {
+  width: 100%;
+  height: 100px;
+  margin-top: 10px;
+}
+
+.container1 button {
+  background: var(--red);
+  color: white;
+  border: none;
+  padding: 10px;
+  width: 100%;
+  margin-top: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background 0.3s ease-in-out;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.container1 button:hover {
+  background: #333;
+}
+
+.rating-top-content {
+  width: max-content;
+  padding: 10px;
+  background: #fff;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.rating-top {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+
+.rating-top .star-bars {
+  font-size: 34px;
+}
+
+.reviews-container-top {
+  display: flex;
+  gap: 5%;
+  flex: 1;
+}
+
+.average-rating {
+  flex: 0 0 55%;
+}
+
+.add-review {
+  flex: 0 0 40%;
+}
+
+@media (max-width: 576px) {
+  .reviews-container-top {
+    flex-direction: column;
+  }
+
+  .add-review {
     padding-top: 20px;
+    margin-top: 20px;
+  }
 }
 
-.all{
-    position: relative;
+.add-review h2,
+.average-rating h2 {
+  text-align: left;
 }
 
-.tab-content{
-    position: relative;
+.add-review .stars .star {
+  font-size: 34px;
 }
 
-/* ================================================= */
-/* Style pour l'alerte */
-.alert {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: hsl(var(--clr-white) );
-    color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    opacity: 0;
-    transition: opacity 0.3s ease, top 0.3s ease;
-    z-index: 9999;
+.rating-top h2,
+.rating-top span {
+  text-align: center;
 }
 
-.alert.show {
-    opacity: 1;
-    top: 50%;
+.rating-bar progress {
+  width: 100%;
+  background: #ccc;
+  border-radius: 5px;
 }
 
-.alert.hide {
-    opacity: 0;
-    top: 40%;
+.rating-bar progress::-webkit-progress-value {
+  background: var(--red);
+  border-radius: 5px;
 }
 
-.alert .close-btn {
-    margin-left: 20px;
-    cursor: pointer;
-    font-weight: bold;
-    color: black;
+.rating-bar progress::-webkit-progress-bar {
+  background: #ccc;
+  border-radius: 5px;
 }
 
-.alert a{
-    text-decoration: none;
+.add-review input,
+.add-review textarea {
+  margin-top: 10px;
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+}
+
+.review {
+  background: #f8f8f8;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+
+.review-header {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
+.header-left {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.user-name {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.review p {
+  color: #444;
+}
+
+.rating-bar {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.stars {
+  display: flex;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.stars .star,
+.star-bars {
+  font-size: 24px;
+  color: #ccc;
+}
+
+.stars .star.active,
+.star-bars.active {
+  color: gold;
+}
+
+.star-bars.active.partial {
+  -webkit-background-clip: text !important;
+  color: transparent;
+}
+
+.error {
+  color: var(--red);
+  opacity: 0;
+  transition: background 0.3s ease-in-out;
+}
+.section-title-btn-wrap {
+  margin-top: 20px;
+}
+
+.similars-products {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+
+@media (min-width: 576px) and (max-width: 992px) {
+  .similars-products {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 576px) {
+  .similars-products {
+    grid-template-columns: 1fr;
+  }
 }
